...
    case alps = "alps"
    case scandinavia = "scandinavia"
    case japan = "japan"
    case oceania = "oceania"
    case southAmerica = "south_america"

    static let typeDisplayRepresentation: TypeDisplayRepresentation = "Region"

    static let caseDisplayRepresentations: [WidgetRegion: DisplayRepresentation] = [
        .all: "All Regions",
        .naWest: "NA West Coast",
        .naRockies: "NA Rockies",
        .naEast: "NA East Coast",
...
